--- a/OOP.html
+++ b/OOP.html
@@ -30,7 +30,7 @@ based on objects.Objects contain data (attributes) and behaviors (methods)
 <li>Classes</li>
 <li>Encapsulation</li>
 <li>Inharitance</li>
-<li>Polymorphism</li>
+<li>Polymorphism</li>\
 <li>Abstarction</li>
 </ul>
 </section>
