--- a/encapsulation.html
+++ b/encapsulation.html
@@ -14,6 +14,15 @@
 <ul>
 <li>Hides Data: Internal representation of an objcet is hidden from the outside world.</li>
 <l1>Controlled Access: Access to internal data is managed via publick methods, such as getters and setters.</l1>
+<li>Bundling: Data and behavior is are packed together, often making the object a "black dox"</li>
+<li>Improved Maintainability: Internal implementation can change without affecting internal code that uses the class.</li>
+</ul>
+
+<h3>Benefits of Encapsulation:</h3>
+<ul>
+<li>Security: Prevents unauthorised or acccidental modification of data.</li>
+<li>Flexibility: Allows developers to change the internal code structure whithout breaking external,  reliant code.</li>
+<li>Modularity: Keeps related data and behaviors organized together.</li>   
 </ul>
 
 <pre>
