--- a/polymorphism.html
+++ b/polymorphism.html
@@ -7,6 +7,21 @@
 </body>
 
 <h1>Polymorphism</h1>
+</p>Polymorphism meaning many forms.It enables objects of different classes
+to be treated as instances of a common superclass,allowing a single 
+intrfaces to represent different underlying forms (datatype)<p>
+
+</h2>Example</h2>
+</p>Shape base on class has a draw() method,but subclasses Circle,Square,
+and Triangle each implement draw() differently.When calling draw() on list
+of shapes, each object acts according to its specific type.
+
+</h3>Benefits</h3>
+<ul>
+<li>Enhances code flexibility,
+ <li>Reusability
+</li>Maintainability    
+</ul>
 
 <p>Polymorphismallows methods to behave differntly</p>
 
