--- a/polymorphism.html
+++ b/polymorphism.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <title>Polymorphism</title>
- <link rel="stylesheet"href="style.css">
+ <link rel="stylesheet" href="css/style.css">
 </head>
 </body>
 
@@ -23,7 +23,7 @@ of shapes, each object acts according to its specific type.
 </li>Maintainability    
 </ul>
 
-<p>Polymorphismallows methods to behave differntly</p>
+<p>Polymorphism allows methods to behave differntly</p>
 
 <pre>
 class Animal{
