--- a/abstraction.html
+++ b/abstraction.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Abstarction</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+    <header>
         <h1>Abstraction</h1>
-        <p>Abstraction hides implementation details.</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="classes.html">Classes</a>
+            <a href="encapsulation.html">Encasulation</a>
+            <a href="inheritance.html">Inheritance</a>
+            <a href="polymorphism.html">Polymorphism</a>
+            <a href="abstraction.html">Abstraction</a>
+        </nav>
+    </header>
+    <section>
+        <h2>Abstraction</h2>
+        <p>Abstraction hides implementation details and shows only functionality to the user.</p>
+
+        <h3>Example:</h3>
         <pre>
         abstract class Shape {
             abstract void draw();
@@ -17,6 +32,7 @@
             }
         }
         </pre>
+    </section>
         <a href="index.html">Back Home</a>
     </body>
 </html>
