--- a/encapsulation.html
+++ b/encapsulation.html
@@ -2,15 +2,27 @@
 <html>
 <head>
      <title>Encapsulation</title>
-    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<header>
+    <h1>Encapsulation</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="classes.html">Classes</a>
+        <a href="encapsulation.html">Encapsulation</a>
+        <a href="inheritance.html">Inheritance</a>
+        <a href="polymorphism.html">Polymorphism</a>
+        <a href="abstraction.html">Abstraction</a>
+    </nav>
+</header>
 
-<h1>Encapsulation</h1>
+<section>
+<h2>Encapsulation</h2>
 
 <p>Encapsulation is a fundamental OOP concept that bundles data (variables) and the methods (functions) that operate  on that data into a single  unit, known as a class.</p>
 
-<h2>Key Aspects of Encapsulation:</h2>
+<h3>Key Aspects of Encapsulation:</h3>
 <ul>
 <li>Hides Data: Internal representation of an objcet is hidden from the outside world.</li>
 <l1>Controlled Access: Access to internal data is managed via publick methods, such as getters and setters.</l1>
@@ -18,7 +30,7 @@
 <li>Improved Maintainability: Internal implementation can change without affecting internal code that uses the class.</li>
 </ul>
 
-<h3>Benefits of Encapsulation:</h3>
+<h4>Benefits of Encapsulation:</h4>
 <ul>
 <li>Security: Prevents unauthorised or acccidental modification of data.</li>
 <li>Flexibility: Allows developers to change the internal code structure whithout breaking external,  reliant code.</li>
@@ -38,7 +50,7 @@ public String getName(){
  }
 }
 </pre>
-
+</section>
 <a href="index.html">Back Home</a>
 
 </body>
