--- a/OOP.html
+++ b/OOP.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html>lang="en">
 <head>
-<tite>Object-Oriented Programming</tite>
+<meta charset="UTF-8"> 
+<tite>OOP Principles</tite>
 <link rel="stylesheet"href="style.css">
 </head>
 </body>
 
 <header>
-<h1>Object-Oriented Programming</h1>
-<nav>
+<h1>class="animated-slide"Object-Oriented Programming</h1>
+<nav>class="animated-slide">
 <a href="index.html">Home</a>
 <a href="classes.html">Classes</a>
 <a href="encapsulation.html">Encapsulation</a>
@@ -18,28 +19,17 @@
 </nav>
 </header>
 
+</section>"hero aminate-fade">
+<h2>Welcome to OOP Principles</h2>
+<p.>Learn about the 4 pillars of <Object-Oriented Programming:Encapsulation,
+Abstraction,Inheritance,and Polymorphism.</p>
+</p>Navigate using the menu above to explore each principle.</p>
 </section>
-<h2>What is OOP?</h2>
-<p.>
-Object-Oriented Programming (OOP) is a programming paradijm
-based on objects.Objects contain data (attributes) and behaviors (methods)
-</p.>
-
-<h3>The Four Pillars of OOP</h3>
-<ul>
-<li>Classes</li>
-<li>Encapsulation</li>
-<li>Inharitance</li>
-<li>Polymorphism</li>\
-<li>Abstarction</li>
-</ul>
-</section>
-
-<footer>
-<p>OOP Websit Project- Group Assignment</p>
-</footer>
-
 </body>
 </html>
+
+
+
+
 
 
