--- a/abstraction.html
+++ b/abstraction.html
@@ -7,8 +7,8 @@
     </head>
     <body>
     <header>
-        <h1>Abstraction</h1>
-        <nav>
+        <h1 class="animate-fade">Abstraction</h1>
+        <nav class="animate-slide">
             <a href="index.html">Home</a>
             <a href="classes.html">Classes</a>
             <a href="encapsulation.html">Encasulation</a>
@@ -17,7 +17,7 @@
             <a href="abstraction.html">Abstraction</a>
         </nav>
     </header>
-    <section>
+    <section class="animate-fade">
         <h2>Abstraction</h2>
         <p>Abstraction hides implementation details and shows only functionality to the user.</p>
 
