--- a/encapsulation.html
+++ b/encapsulation.html
@@ -1,13 +1,14 @@
 <DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
      <title>Encapsulation</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
-    <h1>Encapsulation</h1>
-    <nav>
+    <h1 class="animate-fade">Encapsulation</h1>
+    <nav calss="animate-slide">
         <a href="index.html">Home</a>
         <a href="classes.html">Classes</a>
         <a href="encapsulation.html">Encapsulation</a>
@@ -17,7 +18,7 @@
     </nav>
 </header>
 
-<section>
+<section class="animate-fade">
 <h2>Encapsulation</h2>
 
 <p>Encapsulation is a fundamental OOP concept that bundles data (variables) and the methods (functions) that operate  on that data into a single  unit, known as a class.</p>
