--- a/classes.html
+++ b/classes.html
@@ -22,19 +22,42 @@
 <section>class="animated-fade">
     <h2>What is a Class?<h2>
     <p>A class is a blueprint for creating objects in Object-Oriented
-    Programming<p>
+    Programming.It defines the properties (variables) and behaviors (methods)
+    the objects created from it will have.<p>
+    <section>
+
+    </section classes="animated-fade">
+    <h2>Why Are Classes important?</h2>
+    <ui style=" list-style-type:none;padding: 10px;">
+    <li> Organize code properly</li>
+    <li> Improve code reuseability</li>
+    <li> Make programs easier to maintain</li>
+    <li> Allow object creation</li>
 
      <h3>Example in Java<h3>
-        <pre>
-    Class Car{
-        String brand;
-        int speed;  
+     <pre>
+    Class Student{
+        String name;
+        int age;  
     
     void drive() {
-        System.out.print("Driving at" + speed + km/h");
+        System.out.print(name + is studying");
     }
 }
     <pre>
     <section>
-    <body>
-    <html>
+    </section class="animate-fade">
+    <h2>Creating an Object</h2>
+</pre>
+Student s1=new Student();
+<s1.name="John"
+s1. age =20;
+s1.study=();
+ </pre>
+ </section>
+
+ <foooter style="margin-top:40px;padding:20px
+  background:rgba(0,0,0,0.6);"></foooter>
+  
+  <body>
+ <html>
