--- a/classes.html
+++ b/classes.html
@@ -49,15 +49,18 @@
     </section class="animate-fade">
     <h2>Creating an Object</h2>
 </pre>
+<section>
+ </pre>
 Student s1=new Student();
-<s1.name="John"
+<s1.name="John";>
 s1. age =20;
 s1.study=();
- </pre>
+</pre>
+
  </section>
 
  <foooter style="margin-top:40px;padding:20px
-  background:rgba(0,0,0,0.6);"></foooter>
+  background; rgba:(0,0,0,0.6)">
   
   <body>
  <html>
