--- a/classes.html
+++ b/classes.html
@@ -59,8 +59,10 @@ s1.study=();
 
  </section>
 
- <foooter style="margin-top:40px;padding:20px
-  background; rgba:(0,0,0,0.6)">
+ <foooter style="margin-top:40px; padding:20px;
+  background:rgba(0,0,0,0.6)">
+  <p>2026 OOP Website Project-</p>
+  <footer>
   
   <body>
  <html>
